# clawfirm

./: .gitignore  README.md  SETUP_GUIDE.md  clawfirm.config.js  package-lock.json  package.json  tsconfig.core.json  tsconfig.social.json  vitest.config.ts  vitest.e2e.config.ts
lib/: auth.js  dispatch.js  install.js  login.js  new.js  skills.js
pigo/: Makefile  REQUIMENTS.md  func  go.mod  go.sum  go.work.sum  memory.md  wails.json
pigo/agent/: agent.go  agent_test.go  bootstrap.go  bootstrap_test.go  compressor.go  compressor_test.go  context.go  context_test.go  helpers_test.go  loop.go  loop_test.go  mode_test.go  queue.go  state.go  systemprompt.go  systemprompt_test.go  temporal.go  temporal_test.go  tool_executor.go  tool_executor_test.go
pigo/app/: app.go  app_test.go  assets.go  config_writer.go
pigo/auth/: keychain.go  resolver.go  resolver_test.go  storage.go  storage_test.go
pigo/cmd/desktop/tavily-cli/: .env.example  .gitignore  pyproject.toml  summarize.py
pigo/config/: config.go  config_test.go  example.yml
pigo/cron/: schedule.go  scheduler.go  scheduler_test.go
pigo/examples/: hello.whip  live_test.go  main.go  test_claude_code.whip
pigo/funcs/: env.go  lexparser.go  library.go
pigo/gateway/: agent_registry.go  gateway_test.go  manager.go  server.go  session.go
pigo/memory/: chunk.go  chunk_test.go  e2e_test.go  embed.go  manager.go  manager_test.go  memory_test.go  summarizer.go  summarizer_test.go  tools.go
pigo/message/: convert.go  convert_test.go  prune.go  (+2 more)
scripts/: hl-news-trader.js  weather-trader-v2.js  weather-trader.js
(+179 files in other folders)
