[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tavily-cli"
version = "0.1.0"
description = "CLI tools for Tavily Search and Crawl APIs"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[project.scripts]
tavily-search = "tavily_cli.cli:search_main"
tavily-crawl  = "tavily_cli.cli:crawl_main"

[tool.setuptools.packages.find]
where = ["src"]
